# Closet_mate

./: README.md
Backend/: .gitignore  app.py  closet_mate.db  config.py  database.py  gemini.py  jwt.py  main.py  model.py  pyproject.toml  schema.py
Backend/Controller/: clothe_controller.py  user_controller.py
Backend/Controllers/: clothe_controller.py  user_controller.py
Backend/Models/: clothe_model.py  user_model.py
Backend/Routers/: clothe_router.py  user_router.py
Backend/Routes/: clothe_router.py  user_router.py
Backend/Schema/: clothe_schema.py  user_schema.py
Backend/Services/: ai_suggestion.py  jwt.py  password.py
Frontend/: package-lock.json
Frontend/src/: App.tsx  main.tsx
Frontend/src/Pages/: CreatePage.tsx  LoginPage.tsx  NotFoundPage.tsx  RegisterPage.tsx
Frontend/src/Services/: Api.tsx  UserApi.tsx
Frontend/src/pages/: RegistrationPage.tsx
